# SpaceCraft

./: .gitignore  CMakeLists.txt  main.cpp
DevNeed/AssetsRaw/: readme.txt
lib/SDL2/: readme.txt
src/: main.cpp
